refactor #159: simplify check domain classes